gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail4269c.d
version https://git-lfs.github.com/spec/v1
oid sha256:813927b8ecd4ba22f6a33b1a06407f4132b499e3320d78c07e3bdc2a98b5d236
size 237
